Fixed z-index on embed code

--- a/src/App.css
+++ b/src/App.css
@@ -98,6 +98,7 @@ body {
     right: 0;
     top: 20px;
     width: 300px;
+    z-index: 1;
 }
 
 .flex {
